Fix to solr client init process

--- a/hello-ltr (Solr).ipynb
+++ b/hello-ltr (Solr).ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,208 +72,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleted index tmdb [Status: 200]\n",
-      "Created index tmdb [Status: 200]\n",
-      "Indexing 27846 documents\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 67456\n",
-      "Skipping 67479\n",
-      "Skipping 133252\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 211779\n",
-      "Skipping 200039\n",
-      "Skipping 69372\n",
-      "Skipping 69487\n",
-      "Skipping 164721\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 124531\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 202855\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 110639\n",
-      "Skipping 205300\n",
-      "Skipping 74309\n",
-      "Skipping 206216\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 10700\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 273740\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 13057\n",
-      "Skipping 264330\n",
-      "Skipping 13716\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 276690\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 68149\n",
-      "Skipping 211877\n",
-      "Skipping 15533\n",
-      "Skipping 15594\n",
-      "Skipping 15738\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 82205\n",
-      "Skipping 82400\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 17882\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 166918\n",
-      "Skipping 156078\n",
-      "Skipping 19341\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 151153\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 20892\n",
-      "Skipping 21680\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 24219\n",
-      "Skipping 24549\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 222481\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 244797\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 355551\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 29133\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 147269\n",
-      "Skipping 31653\n",
-      "Skipping 162806\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 230657\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 136991\n",
-      "Skipping 166986\n",
-      "Skipping 101517\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 298573\n",
-      "Skipping 37106\n",
-      "Skipping 168332\n",
-      "Skipping 233984\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 37525\n",
-      "Skipping 169224\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 301231\n",
-      "Skipping 170359\n",
-      "Skipping 225130\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 94174\n",
-      "Skipping 172538\n",
-      "Skipping 238386\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 239163\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 110414\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 113879\n",
-      "Skipping 114049\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 78057\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 313289\n",
-      "Skipping 314040\n",
-      "Skipping 51982\n",
-      "Skipping 248785\n",
-      "Skipping 281788\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 53285\n",
-      "Skipping 53803\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 12773\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 252993\n",
-      "Skipping 252995\n",
-      "Skipping 253768\n",
-      "Skipping 57290\n",
-      "Skipping 253941\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 58423\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 191903\n",
-      "Skipping 61917\n",
-      "Skipping 61919\n",
-      "Skipping 61920\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 62582\n",
-      "Skipping 62653\n",
-      "Skipping 185441\n",
-      "Flushing 500 movies\n",
-      "Done [Status: 200]\n",
-      "Skipping 64699\n",
-      "Flushing 260 movies\n",
-      "Done [Status: 200]\n",
-      "Done\n"
+      "Deleted index tmdb [Status: 400]\n",
+      "{\n",
+      "  \"responseHeader\":{\n",
+      "    \"status\":400,\n",
+      "    \"QTime\":4},\n",
+      "  \"error\":{\n",
+      "    \"metadata\":[\n",
+      "      \"error-class\",\"org.apache.solr.common.SolrException\",\n",
+      "      \"root-error-class\",\"org.apache.solr.common.SolrException\"],\n",
+      "    \"msg\":\"Cannot unload non-existent core [tmdb]\",\n",
+      "    \"code\":400}}\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "{\n  \"responseHeader\":{\n    \"status\":400,\n    \"QTime\":4},\n  \"error\":{\n    \"metadata\":[\n      \"error-class\",\"org.apache.solr.common.SolrException\",\n      \"root-error-class\",\"org.apache.solr.common.SolrException\"],\n    \"msg\":\"Cannot unload non-existent core [tmdb]\",\n    \"code\":400}}\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-caf912dfad7c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mltr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrebuild_tmdb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mrebuild_tmdb\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclient\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/dev/osc/train/class/hello-ltr/ltr/index.py\u001b[0m in \u001b[0;36mrebuild_tmdb\u001b[0;34m(client, settings, enrich)\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m     \u001b[0mreindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mschema\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msettings\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0menrich\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0menrich\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'tmdb'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Done'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/dev/osc/train/class/hello-ltr/ltr/index.py\u001b[0m in \u001b[0;36mreindex\u001b[0;34m(client, schema, index, enrich)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mreindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mschema\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'tmdb'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0menrich\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnoop\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mclient\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdelete_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mclient\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mschema\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/dev/osc/train/class/hello-ltr/ltr/client/solr_client.py\u001b[0m in \u001b[0;36mdelete_index\u001b[0;34m(self, index)\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m         \u001b[0mresp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'{}/admin/cores?'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msolr_base_ep\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m         \u001b[0mresp_msg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"Deleted index {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mresp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mcreate_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msettings\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/dev/osc/train/class/hello-ltr/ltr/helpers/handle_resp.py\u001b[0m in \u001b[0;36mresp_msg\u001b[0;34m(msg, resp, throw)\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mthrow\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: {\n  \"responseHeader\":{\n    \"status\":400,\n    \"QTime\":4},\n  \"error\":{\n    \"metadata\":[\n      \"error-class\",\"org.apache.solr.common.SolrException\",\n      \"root-error-class\",\"org.apache.solr.common.SolrException\"],\n    \"msg\":\"Cannot unload non-existent core [tmdb]\",\n    \"code\":400}}\n"
      ]
     }
    ],
@@ -663,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
