--- a/hello-ltr.ipynb
+++ b/hello-ltr.ipynb
@@ -37,6 +37,8 @@
       "GET http://es-learn-to-rank.labs.o19s.com/tmdb.json\n",
       "GET http://es-learn-to-rank.labs.o19s.com/RankyMcRankFace.jar\n",
       "GET http://es-learn-to-rank.labs.o19s.com/title_judgments.txt\n",
+      "GET http://es-learn-to-rank.labs.o19s.com/genome_judgments.txt\n",
+      "GET http://es-learn-to-rank.labs.o19s.com/sample_judgments_train.txt\n",
       "Done.\n"
      ]
     }
@@ -85,7 +87,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleted index tmdb [Status: 200]\n",
+      "Deleted index tmdb [Status: 404]\n",
+      "{\n",
+      "  \"error\": {\n",
+      "    \"root_cause\": [\n",
+      "      {\n",
+      "        \"type\": \"index_not_found_exception\",\n",
+      "        \"reason\": \"no such index\",\n",
+      "        \"resource.type\": \"index_or_alias\",\n",
+      "        \"resource.id\": \"tmdb\",\n",
+      "        \"index_uuid\": \"_na_\",\n",
+      "        \"index\": \"tmdb\"\n",
+      "      }\n",
+      "    ],\n",
+      "    \"type\": \"index_not_found_exception\",\n",
+      "    \"reason\": \"no such index\",\n",
+      "    \"resource.type\": \"index_or_alias\",\n",
+      "    \"resource.id\": \"tmdb\",\n",
+      "    \"index_uuid\": \"_na_\",\n",
+      "    \"index\": \"tmdb\"\n",
+      "  },\n",
+      "  \"status\": 404\n",
+      "}\n",
       "Created index tmdb [Status: 200]\n",
       "Reindexing...\n",
       "Indexed 0 movies (last Black Mirror: White Christmas)\n",
@@ -262,7 +285,13 @@
       "Indexed 17100 movies (last Love Bites)\n",
       "Indexed 17200 movies (last The Ballad of Ramblin' Jack)\n",
       "Indexed 17300 movies (last Blade of the Ripper)\n",
-      "Indexed 17400 movies (last Kiler)\n",
+      "Indexed 17400 movies (last Kiler)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Indexed 17500 movies (last Kaïrat)\n",
       "Indexed 17600 movies (last Body Bags)\n",
       "Indexed 17700 movies (last Dave Attell: Captain Miserable)\n",
@@ -272,13 +301,7 @@
       "Indexed 18100 movies (last Shock)\n",
       "Indexed 18200 movies (last Harvey)\n",
       "Indexed 18300 movies (last The Worthless)\n",
-      "Indexed 18400 movies (last Queen of the Mountains)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Indexed 18400 movies (last Queen of the Mountains)\n",
       "Indexed 18500 movies (last Urgh! A Music War)\n",
       "Indexed 18600 movies (last Wuthering Heights)\n",
       "Indexed 18700 movies (last Gabriel Over the White House)\n",
@@ -395,14 +418,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Removed Default LTR feature store [Status: 200]\n",
+      "Removed Default LTR feature store [Status: 404]\n",
+      "{\"error\":{\"root_cause\":[{\"type\":\"index_not_found_exception\",\"reason\":\"no such index\",\"resource.type\":\"index_or_alias\",\"resource.id\":\".ltrstore\",\"index_uuid\":\"_na_\",\"index\":\".ltrstore\"}],\"type\":\"index_not_found_exception\",\"reason\":\"no such index\",\"resource.type\":\"index_or_alias\",\"resource.id\":\".ltrstore\",\"index_uuid\":\"_na_\",\"index\":\".ltrstore\"},\"status\":404}\n",
       "Initialize Default LTR feature store [Status: 200]\n",
       "Create release feature set [Status: 201]\n"
      ]
@@ -479,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -499,10 +523,10 @@
     {
      "data": {
       "text/plain": [
-       "<ltr.helpers.ranklib_result.TrainingLog at 0x1350e4ac8>"
+       "<ltr.helpers.ranklib_result.TrainingLog at 0x136b165f8>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +583,7 @@
          "mode": "lines",
          "name": "classic",
          "type": "scatter",
-         "uid": "084bc321-3dd4-4d34-b3c1-d558eec7137b",
+         "uid": "594de9aa-8983-4e91-bb02-4d2e5c1b8a37",
          "x": [
           0,
           1,
@@ -593,34 +617,34 @@
           29
          ],
          "y": [
-          "1949",
           "1943",
-          "1989",
+          "1949",
           "1966",
           "1992",
+          "1989",
           "2013",
-          "2000",
+          "2013",
           "2012",
-          "2010",
-          "2005",
-          "1998",
-          "2005",
-          "1997",
-          "2003",
           "2011",
-          "2010",
+          "2005",
+          "2003",
+          "1998",
+          "1998",
           "2008",
+          "1997",
+          "2000",
+          "2010",
+          "2005",
+          "2010",
           "2008",
           "2009",
-          "1998",
-          "2013",
           "1993",
           "1995",
           "2014",
-          "2016",
           "2017",
           "2014",
           "2015",
+          "2016",
           "2016",
           "2016"
          ]
@@ -629,7 +653,7 @@
          "mode": "lines",
          "name": "latest",
          "type": "scatter",
-         "uid": "8bd6d0e3-86c6-43a9-b1f0-da3336cdb874",
+         "uid": "1a4ea84f-3251-4438-b17e-8481c4418935",
          "x": [
           0,
           1,
@@ -669,48 +693,48 @@
           "2016",
           "2016",
           "2017",
-          "2015",
-          "2013",
-          "2012",
           "2011",
           "2013",
-          "2010",
-          "2010",
-          "2008",
-          "2008",
-          "2009",
-          "2000",
-          "2005",
+          "2013",
+          "2015",
+          "2012",
+          "1995",
           "1993",
           "2005",
+          "2008",
+          "2010",
+          "2005",
+          "2010",
+          "2008",
+          "2009",
           "2003",
-          "1992",
-          "1995",
+          "1998",
           "1998",
           "1997",
-          "1998",
-          "1966",
+          "2000",
+          "1992",
           "1949",
-          "1943",
-          "1989"
+          "1989",
+          "1966",
+          "1943"
          ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"eec196eb-97eb-4ea8-9eb0-da34905dd6e5\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
-       "if (document.getElementById(\"eec196eb-97eb-4ea8-9eb0-da34905dd6e5\")) {\n",
-       "    Plotly.newPlot(\"eec196eb-97eb-4ea8-9eb0-da34905dd6e5\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"1949\", \"1943\", \"1989\", \"1966\", \"1992\", \"2013\", \"2000\", \"2012\", \"2010\", \"2005\", \"1998\", \"2005\", \"1997\", \"2003\", \"2011\", \"2010\", \"2008\", \"2008\", \"2009\", \"1998\", \"2013\", \"1993\", \"1995\", \"2014\", \"2016\", \"2017\", \"2014\", \"2015\", \"2016\", \"2016\"], \"type\": \"scatter\", \"uid\": \"084bc321-3dd4-4d34-b3c1-d558eec7137b\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"2014\", \"2014\", \"2016\", \"2016\", \"2016\", \"2017\", \"2015\", \"2013\", \"2012\", \"2011\", \"2013\", \"2010\", \"2010\", \"2008\", \"2008\", \"2009\", \"2000\", \"2005\", \"1993\", \"2005\", \"2003\", \"1992\", \"1995\", \"1998\", \"1997\", \"1998\", \"1966\", \"1949\", \"1943\", \"1989\"], \"type\": \"scatter\", \"uid\": \"8bd6d0e3-86c6-43a9-b1f0-da3336cdb874\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
+       "<div id=\"dc9aac4c-503d-46b6-9d7f-74ef96dd2753\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "if (document.getElementById(\"dc9aac4c-503d-46b6-9d7f-74ef96dd2753\")) {\n",
+       "    Plotly.newPlot(\"dc9aac4c-503d-46b6-9d7f-74ef96dd2753\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"1943\", \"1949\", \"1966\", \"1992\", \"1989\", \"2013\", \"2013\", \"2012\", \"2011\", \"2005\", \"2003\", \"1998\", \"1998\", \"2008\", \"1997\", \"2000\", \"2010\", \"2005\", \"2010\", \"2008\", \"2009\", \"1993\", \"1995\", \"2014\", \"2017\", \"2014\", \"2015\", \"2016\", \"2016\", \"2016\"], \"type\": \"scatter\", \"uid\": \"594de9aa-8983-4e91-bb02-4d2e5c1b8a37\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"2014\", \"2014\", \"2016\", \"2016\", \"2016\", \"2017\", \"2011\", \"2013\", \"2013\", \"2015\", \"2012\", \"1995\", \"1993\", \"2005\", \"2008\", \"2010\", \"2005\", \"2010\", \"2008\", \"2009\", \"2003\", \"1998\", \"1998\", \"1997\", \"2000\", \"1992\", \"1949\", \"1989\", \"1966\", \"1943\"], \"type\": \"scatter\", \"uid\": \"1a4ea84f-3251-4438-b17e-8481c4418935\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
        "}\n",
-       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"eec196eb-97eb-4ea8-9eb0-da34905dd6e5\")) {window._Plotly.Plots.resize(document.getElementById(\"eec196eb-97eb-4ea8-9eb0-da34905dd6e5\"));};})</script>"
+       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"dc9aac4c-503d-46b6-9d7f-74ef96dd2753\")) {window._Plotly.Plots.resize(document.getElementById(\"dc9aac4c-503d-46b6-9d7f-74ef96dd2753\"));};})</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"eec196eb-97eb-4ea8-9eb0-da34905dd6e5\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
-       "if (document.getElementById(\"eec196eb-97eb-4ea8-9eb0-da34905dd6e5\")) {\n",
-       "    Plotly.newPlot(\"eec196eb-97eb-4ea8-9eb0-da34905dd6e5\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"1949\", \"1943\", \"1989\", \"1966\", \"1992\", \"2013\", \"2000\", \"2012\", \"2010\", \"2005\", \"1998\", \"2005\", \"1997\", \"2003\", \"2011\", \"2010\", \"2008\", \"2008\", \"2009\", \"1998\", \"2013\", \"1993\", \"1995\", \"2014\", \"2016\", \"2017\", \"2014\", \"2015\", \"2016\", \"2016\"], \"type\": \"scatter\", \"uid\": \"084bc321-3dd4-4d34-b3c1-d558eec7137b\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"2014\", \"2014\", \"2016\", \"2016\", \"2016\", \"2017\", \"2015\", \"2013\", \"2012\", \"2011\", \"2013\", \"2010\", \"2010\", \"2008\", \"2008\", \"2009\", \"2000\", \"2005\", \"1993\", \"2005\", \"2003\", \"1992\", \"1995\", \"1998\", \"1997\", \"1998\", \"1966\", \"1949\", \"1943\", \"1989\"], \"type\": \"scatter\", \"uid\": \"8bd6d0e3-86c6-43a9-b1f0-da3336cdb874\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
+       "<div id=\"dc9aac4c-503d-46b6-9d7f-74ef96dd2753\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "if (document.getElementById(\"dc9aac4c-503d-46b6-9d7f-74ef96dd2753\")) {\n",
+       "    Plotly.newPlot(\"dc9aac4c-503d-46b6-9d7f-74ef96dd2753\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"1943\", \"1949\", \"1966\", \"1992\", \"1989\", \"2013\", \"2013\", \"2012\", \"2011\", \"2005\", \"2003\", \"1998\", \"1998\", \"2008\", \"1997\", \"2000\", \"2010\", \"2005\", \"2010\", \"2008\", \"2009\", \"1993\", \"1995\", \"2014\", \"2017\", \"2014\", \"2015\", \"2016\", \"2016\", \"2016\"], \"type\": \"scatter\", \"uid\": \"594de9aa-8983-4e91-bb02-4d2e5c1b8a37\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"2014\", \"2014\", \"2016\", \"2016\", \"2016\", \"2017\", \"2011\", \"2013\", \"2013\", \"2015\", \"2012\", \"1995\", \"1993\", \"2005\", \"2008\", \"2010\", \"2005\", \"2010\", \"2008\", \"2009\", \"2003\", \"1998\", \"1998\", \"1997\", \"2000\", \"1992\", \"1949\", \"1989\", \"1966\", \"1943\"], \"type\": \"scatter\", \"uid\": \"1a4ea84f-3251-4438-b17e-8481c4418935\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
        "}\n",
-       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"eec196eb-97eb-4ea8-9eb0-da34905dd6e5\")) {window._Plotly.Plots.resize(document.getElementById(\"eec196eb-97eb-4ea8-9eb0-da34905dd6e5\"));};})</script>"
+       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"dc9aac4c-503d-46b6-9d7f-74ef96dd2753\")) {window._Plotly.Plots.resize(document.getElementById(\"dc9aac4c-503d-46b6-9d7f-74ef96dd2753\"));};})</script>"
       ]
      },
      "metadata": {},
@@ -748,7 +772,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
