add tree to query level whoopsies

--- a/tale-of-two-queries.ipynb
+++ b/tale-of-two-queries.ipynb
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
     "                        \"filter\": {\n",
     "                            \"match_phrase\": {\"genres\": \"Science Fiction\"}\n",
     "                        },\n",
-    "                        \"boost\": 10.0                    }\n",
+    "                        \"boost\": 1.0                    }\n",
     "            }\n",
     "            },\n",
     "             {\n",
@@ -463,7 +463,7 @@
     "                        \"filter\": {\n",
     "                            \"match_phrase\": {\"genres\": \"Drama\"}\n",
     "                        },\n",
-    "                        \"boost\": 4.0                    }\n",
+    "                        \"boost\": 1.0                    }\n",
     "                }\n",
     "            },\n",
     "             {\n",
@@ -474,7 +474,7 @@
     "                        \"filter\": {\n",
     "                            \"match_phrase\": {\"genres\": \"{{keywords}}\"}\n",
     "                        },\n",
-    "                        \"boost\": 100.0\n",
+    "                        \"boost\": 1.0\n",
     "                    }\n",
     "                }\n",
     "            }\n",
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -590,20 +590,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"size\": 5, \"query\": {\"sltr\": {\"params\": {\"keywords\": \"Drama\"}, \"model\": \"genre\"}}}\n",
+      "{\"size\": 5, \"query\": {\"sltr\": {\"params\": {\"keywords\": \"drama\"}, \"model\": \"genre\"}}}\n",
       "Searching tmdb - {'size': 5, 'query': [Status: 200]\n",
-      "Guardians of the Galaxy Vol. 2 \n",
+      "Transformers: The Last Knight \n",
       "1.406109 \n",
       "2017 \n",
-      "['Action', 'Adventure', 'Comedy', 'Science Fiction'] \n",
-      "The Guardians must fight to keep their newfound family together as they unravel the mysteries of Peter Quill's true parentage. \n",
+      "['Action', 'Science Fiction', 'Thriller', 'Adventure'] \n",
+      "Autobots and Decepticons are at war, with humans on the sidelines. Optimus Prime is gone. The key to saving our future lies buried in the secrets of the past, in the hidden history of Transformers on Earth. \n",
+      "---------------------------------------\n",
+      "Life \n",
+      "1.406109 \n",
+      "2017 \n",
+      "['Horror', 'Science Fiction', 'Thriller'] \n",
+      "The six-member crew of the International Space Station is tasked with studying a sample from Mars that may be the first proof of extra-terrestrial life, which proves more intelligent than ever expected. \n",
       "---------------------------------------\n",
       "Monster Trucks \n",
       "1.406109 \n",
@@ -622,19 +628,13 @@
       "2016 \n",
       "['Action', 'Horror', 'Science Fiction'] \n",
       "Picking up immediately after the events in Resident Evil: Retribution, Alice (Milla Jovovich) is the only survivor of what was meant to be humanity's final stand against the undead. Now, she must return to where the nightmare began - The Hive in Raccoon City, where the Umbrella Corporation is gathering its forces for a final strike against the only remaining survivors of the apocalypse. \n",
-      "---------------------------------------\n",
-      "iBoy \n",
-      "1.406109 \n",
-      "2017 \n",
-      "['Action', 'Crime', 'Science Fiction', 'Thriller'] \n",
-      "After an accident, Tom wakes from a coma to discover that fragments of his smart phone have been embedded in his head, and worse, that returning to normal teenage life is impossible because he has developed a strange set of super powers. \n",
       "---------------------------------------\n"
      ]
     }
    ],
    "source": [
     "from ltr.search import search\n",
-    "search(client, keywords=\"Drama\", modelName=\"genre\")"
+    "search(client, keywords=\"drama\", modelName=\"genre\")"
    ]
   },
   {
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -735,51 +735,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"size\": 5, \"query\": {\"sltr\": {\"params\": {\"keywords\": \"science fiction\"}, \"model\": \"genre\"}}}\n",
+      "{\"size\": 5, \"query\": {\"sltr\": {\"params\": {\"keywords\": \"drama\"}, \"model\": \"genre\"}}}\n",
       "Searching tmdb - {'size': 5, 'query': [Status: 200]\n",
-      "Guardians of the Galaxy Vol. 2 \n",
-      "1.4070511 \n",
-      "2017 \n",
-      "['Action', 'Adventure', 'Comedy', 'Science Fiction'] \n",
-      "The Guardians must fight to keep their newfound family together as they unravel the mysteries of Peter Quill's true parentage. \n",
+      "A Man There Was \n",
+      "1.3831193 \n",
+      "1917 \n",
+      "['Drama'] \n",
+      "Terje Vigen, a sailor, suffers the loss of his family through the cruelty of another man. Years later, when his enemy's family finds itself dependent on Terje's benevolence, Terje must decide whether to avenge himself. \n",
       "---------------------------------------\n",
-      "Monster Trucks \n",
-      "1.4070511 \n",
-      "2016 \n",
-      "['Action', 'Comedy', 'Science Fiction'] \n",
-      "Looking for any way to get away from the life and town he was born into, Tripp, a high school senior, builds a Monster Truck from bits and pieces of scrapped cars. After an accident at a nearby oil-drilling site displaces a strange and subterranean creature with a taste and a talent for speed, Tripp may have just found the key to getting out of town and a most unlikely friend. \n",
+      "The Immigrant \n",
+      "1.3831193 \n",
+      "1917 \n",
+      "['Comedy', 'Drama'] \n",
+      "Charlie is an immigrant who endures a challenging voyage and gets into trouble as soon as he arrives in America. \n",
       "---------------------------------------\n",
-      "ARQ \n",
-      "1.4070511 \n",
-      "2016 \n",
-      "['Science Fiction', 'Thriller'] \n",
-      "Two old friends living in a dystopic future become trapped in a mysterious time loop — one that may have something to do with an ongoing battle between an omnipotent corporation and a ragtag band of rebels. \n",
+      "Dr. Jekyll and Mr. Hyde \n",
+      "1.3828127 \n",
+      "1920 \n",
+      "['Drama', 'Horror', 'Science Fiction'] \n",
+      "Dr. Jekyll and Mr. Hyde is a 1920 horror silent film based upon Robert Louis Stevenson's novella The Strange Case of Dr Jekyll and Mr Hyde and starring actor John Barrymore. \n",
       "---------------------------------------\n",
-      "Resident Evil: The Final Chapter \n",
-      "1.4070511 \n",
-      "2016 \n",
-      "['Action', 'Horror', 'Science Fiction'] \n",
-      "Picking up immediately after the events in Resident Evil: Retribution, Alice (Milla Jovovich) is the only survivor of what was meant to be humanity's final stand against the undead. Now, she must return to where the nightmare began - The Hive in Raccoon City, where the Umbrella Corporation is gathering its forces for a final strike against the only remaining survivors of the apocalypse. \n",
+      "The Cabinet of Dr. Caligari \n",
+      "1.3828127 \n",
+      "1920 \n",
+      "['Drama', 'Horror', 'Thriller', 'Crime'] \n",
+      "The Cabinet of Dr. Caligari is eerie and expressionistic, silent and surreal. It has become not only a classic of German Expressionist cinema, but a landmark in film history, with creative scenery and an unusual ending. \n",
       "---------------------------------------\n",
-      "iBoy \n",
-      "1.4070511 \n",
-      "2017 \n",
-      "['Action', 'Crime', 'Science Fiction', 'Thriller'] \n",
-      "After an accident, Tom wakes from a coma to discover that fragments of his smart phone have been embedded in his head, and worse, that returning to normal teenage life is impossible because he has developed a strange set of super powers. \n",
+      "The Last of the Mohicans \n",
+      "1.3828127 \n",
+      "1920 \n",
+      "['Adventure', 'Drama', 'Action', 'History'] \n",
+      "As Alice and Cora Munro attempt to find their father, a British officer in the French and Indian War, they are set upon by French soldiers and their cohorts, Huron tribesmen led by the evil Magua. Fighting to rescue the women are Chingachgook and his son Uncas, the last of the Mohican tribe, and their white ally, the frontiersman Natty Bumppo, known as Hawkeye. \n",
       "---------------------------------------\n"
      ]
     }
    ],
    "source": [
     "from ltr.search import search\n",
-    "search(client, keywords=\"science fiction\", modelName=\"genre\")"
+    "search(client, keywords=\"drama\", modelName=\"genre\")"
    ]
   },
   {
