Cleaning up sandbox

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
     "from ltr.log import judgments_to_training_set\n",
     "trainingSet = judgments_to_training_set(client, \n",
     "                                        judgmentInFile='data/title_judgments.txt', \n",
-    "                                        trainingOutFile='data/title_judgments_train.txt', \n",
+    "                                        trainingOutFile='data/sandbox_judgments_train.txt', \n",
     "                                        featureSet='sandbox')"
    ]
   },
@@ -196,38 +196,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -metric2t DCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/sandbox_model.txt \n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -metric2t NDCG@10 -tree 20 -leaf 20 -train data/sandbox_judgments_train.txt -save data/sandbox_model.txt \n",
       "DONE\n",
       "Delete model sandbox: 404\n",
       "Created Model sandbox [Status: 201]\n",
       "\n",
       "Impact of each feature on the model\n",
-      "1 - 10329140904.551977\n",
-      "20.9638\n",
-      "20.9573\n",
-      "20.9539\n",
-      "20.9649\n",
-      "20.9641\n",
-      "20.984\n",
-      "20.9771\n",
-      "20.9931\n",
-      "20.9842\n",
-      "20.9735\n",
-      "Train NDCG@10 20.9735\n"
+      "1 - 35493.99538433604\n",
+      "0.9124\n",
+      "0.9124\n",
+      "0.9124\n",
+      "0.9124\n",
+      "0.9124\n",
+      "0.9124\n",
+      "0.9102\n",
+      "0.9073\n",
+      "0.9073\n",
+      "0.9072\n",
+      "0.9075\n",
+      "0.9093\n",
+      "0.9099\n",
+      "0.9099\n",
+      "0.9099\n",
+      "0.9099\n",
+      "0.9099\n",
+      "0.9099\n",
+      "0.9107\n",
+      "0.9116\n",
+      "Train NDCG@10 0.9116\n"
      ]
     }
    ],
    "source": [
+    "'''\n",
+    "  TASK:\n",
+    "  Experiment with the leafs and trees variables, how do they affect NGCG?\n",
+    "  Does a high leaf value increase your NDCG?  What could be the potential downfalls?\n",
+    "'''\n",
     "from ltr import train\n",
     "trainLog  = train(client,\n",
-    "                  trainingInFile='data/title_judgments_train.txt',\n",
+    "                  trainingInFile='data/sandbox_judgments_train.txt',\n",
+    "                  metric2t='NDCG@10',\n",
+    "                  leafs=20,\n",
+    "                  trees=20,\n",
     "                  featureSet='sandbox',\n",
     "                  modelName='sandbox')\n",
     "\n",
@@ -251,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -261,31 +279,31 @@
       "{\"size\": 5, \"query\": {\"sltr\": {\"params\": {\"keywords\": \"rambo\"}, \"model\": \"sandbox\"}}}\n",
       "Searching tmdb - {'size': 5, 'query': [Status: 200]\n",
       "Rambo \n",
-      "1.3671871 \n",
+      "2.269571 \n",
       "2008 \n",
       "['Action', 'Thriller'] \n",
       "When governments fail to act on behalf of captive missionaries, ex-Green Beret John James Rambo sets aside his peaceful existence along the Salween River in a war-torn region of Thailand to take action.  Although he's still haunted by violent memories of his time as a U.S. soldier during the Vietnam War, Rambo can hardly turn his back on the aid workers who so desperately need his help. \n",
       "---------------------------------------\n",
       "Rambo III \n",
-      "0.97891 \n",
+      "1.7274473 \n",
       "1988 \n",
       "['Action', 'Adventure', 'Thriller', 'War'] \n",
       "Combat has taken its toll on Rambo, but he's finally begun to find inner peace in a monastery. When Rambo's friend and mentor Col. Trautman asks for his help on a top secret mission to Afghanistan, Rambo declines but must reconsider when Trautman is captured. \n",
       "---------------------------------------\n",
       "Rambo: First Blood Part II \n",
-      "-0.14909366 \n",
+      "-1.3226807 \n",
       "1985 \n",
       "['Action', 'Adventure', 'Drama', 'Thriller', 'War'] \n",
       "Col. Troutman recruits ex-Green Beret John Rambo for a highly secret and dangerous mission. Teamed with freedom fighter Co Bao, Rambo goes deep into Vietnam to rescue POWs. Deserted by his own team, he's left in a hostile jungle to fight for his life, avenge the death of a woman and bring corrupt officials to justice. \n",
       "---------------------------------------\n",
       "Black Mirror: White Christmas \n",
-      "-1.2741845 \n",
+      "-2.0689206 \n",
       "2014 \n",
       "['Drama', 'Horror', 'Mystery', 'Science Fiction', 'Thriller', 'TV Movie'] \n",
       "This feature-length special consists of three interwoven stories. In a mysterious and remote snowy outpost, Matt and Potter share a Christmas meal, swapping creepy tales of their earlier lives in the outside world. Matt is a charismatic American trying to bring the reserved, secretive Potter out of his shell. But are both men who they appear to be? A woman gets thrust into a nightmarish world of 'smart' gadgetry. Plus a look at what would happen if you could 'block' people in real life. \n",
       "---------------------------------------\n",
       "The Brave-Hearted Will Take the Bride \n",
-      "-1.2741845 \n",
+      "-2.0689206 \n",
       "1995 \n",
       "['Comedy', 'Drama', 'Romance'] \n",
       "Raj is a rich, carefree, happy-go-lucky second generation NRI. Simran is the daughter of Chaudhary Baldev Singh, who in spite of being an NRI is very strict about adherence to Indian values. Simran has left for India to be married to her childhood fiancé. Raj leaves for India with a mission at his hands, to claim his lady love under the noses of her whole family. Thus begins a saga. \n",
